2013-11-09 Wolfgang Hofer <hof@gimp.org>

  - replaced outdated Incorrect software address of Free software foundation 
    from comments (assuggested in #711402)
 
   OLD:
     * You should have received a copy of the GNU General Public License
     * along with this program; if not, write to the Free Software
     * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

   NEW:
    * You should have received a copy of the GNU Lesser General Public
    * License along with this library.  If not, see
    * <http://www.gnu.org/licenses/>.
  
  * This touched nearly all *.c and *.h files
  
2013-07-21 Wolfgang Hofer <hof@gimp.org>


- Moved render framename feature to submenu.
   from menu  <Image>/Video/Filename to Layer
   to menu    <Image>/Video/Layer/Render/Filename to Layer
 
   
- added support for processing of incomplete frame sequences where some frame images are missing.
  old behaviour handled this case as error condition and stopped processing.
  new behaviour makes attempts to find the next available framenumber and continues
  processing when a next frame image can be found.

  The implemted strategy checks some (10) potential next frame numbers
  and triggers a directory scan (that is more expensive tha a single file exists check)
  in case when more frames are missing.
  Example how this works:
  
      IMG_0050.XCF
      IMG_0051.XCF
      ............   (frames 52 to 59 are missing and will be checked via
                      if (IMG_nr.XCF exists) in a loop.
                      processing continues with IMG_0060.XCF)
      IMG_0060.XCF
      IMG_0061.XCF
      IMG_0062.XCF
      ............   (frames 62 to 89 are missing
                      after 10 failed attempts if (IMG_nr.XCF exists)
                      a directory scan is performed to find the next framenumber 90
                      and processing continues with IMG_0090.XCF)
      IMG_0090.XCF
      
  The following features (menu entries) were updated