@@ -24,7 +24,7 @@
  *
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
- * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ * <http://www.gnu.org/licenses/>.
  */
 #ifndef _GAP_APCL_LIB_H
 #define _GAP_APCL_LIB_H
